# naval-battle-bot

./: .gitignore  README.md  main.py  pyproject.toml
config_data/: config.py
handlers/: command_handlers.py  user_handlers.py
keyboards/: set_menu.py
lexicon/: lexicon_ru.py
